--- a/templates/first/first.html
+++ b/templates/first/first.html
@@ -23,7 +23,7 @@
                             <input  name="{{ form.name.name }}" class="form-control">
                         </div>
                          <div class="form-group">
-                             <label>Ваше е-мэйл5:</label>
+                             <label>Ваше е-мэйл:</label>
                             <input  name="{{ form.email.name }}" class="form-control">
                         </div>
                             <button type="submit" class="btn btn-primary btn-orange">Отправить</button>
