--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,9 @@
 <footer class="footer">
-    <div class="container">
-        <div class='text'>
-            <h3>FOOTER</h3>
+    <div class="footer-bottom">
+        <div class="container">
+            <div class='text'>
+{#                <h3>FOOTER</h3>#}
+            </div>
         </div>
-    </div>
+     </div>
 </footer>
