--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@ html, body {
     max-height: 100%;
     font-family: 'Roboto', sans-serif;
     background-color: #edeef0;
+    /*display: flex;*/
 }
 
 .section-top{
@@ -27,7 +28,7 @@ margin: 20px;
     margin-top: -180px;
     height: 200px;
     clear: both;
-    background-color: white;
+    background-color: #E3E3E3;
 }
 
 .product-item{
@@ -66,6 +67,7 @@ margin: 20px;
     background-color: darkseagreen;
     text-align: center;
     color: white;
+    display: flex;
 }
 
 .tb{
@@ -115,3 +117,67 @@ margin: 20px;
 .form-error{
     color:red
 }
+
+/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+
+/*.slider{*/
+/*    width: 500px;*/
+/*    height: 300px;*/
+/*    margin: 100px;*/
+/*    position: relative;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*}*/
+/*.img{*/
+/*    text-align: center;*/
+/*    line-height: 300px;*/
+/*    position: absolute;*/
+/*    font-size: 50px;*/
+/*    color: #fff;*/
+/*    display: none;*/
+/*}*/
+/*.img.curry{*/
+/*    display: block;*/
+/*}*/
+/*.img:first-child{*/
+/*    width: 500px;*/
+/*    background: red;*/
+/*}*/
+/*.img:nth-child(2){*/
+/*    width: 500px;*/
+/*    background: green;*/
+/*}*/
+/*.img:nth-child(3){*/
+/*    width: 500px;*/
+/*    background: blue;*/
+/*}*/
+/*.img:nth-child(4){*/
+/*    width: 500px;*/
+/*    background: yellow;*/
+/*}*/
+/*.img:nth-child(5){*/
+/*    width: 500px;*/
+/*    background: gold;*/
+/*}*/
+/*.n{*/
+/*    color:#575757;*/
+/*}*/
+/*a{*/
+/*    text-decoration: none;*/
+/*    color: #FD7EAD;*/
+/*    font-size: 20px;*/
+/*}*/
+/*a:hover{*/
+/*    color: #0AB6DD;*/
+/*}*/
+/*.prev{*/
+/*    position: relative;*/
+/*    top: 240px;*/
+/*    left: 400px;*/
+/*}*/
+/*.next{*/
+/*    position: relative;*/
+/*    top: 240px;*/
+/*    left: 400px;*/
+/*}*/
