--- a/templates/first/home.html
+++ b/templates/first/home.html
@@ -19,11 +19,20 @@
             </div>
          </div>
     </div>
-    <div class="section section-delivery">
-        <div>
-            <h3>Free shiping</h3>
-        </div>
-    </div>
+{#    <div class="section section-delivery">#}
+{# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!#}
+{#        <div class="prev n"><a href="#"> Pref </a></div>>#}
+{#            <div class="slider">#}
+{#                <div class="img curry">1</div>#}
+{#                <div class="img">2</div>#}
+{#                <div class="img">3</div>#}
+{#                <div class="img">4</div>#}
+{#                <div class="img">5</div>#}
+{#            </div>#}
+{#        <div class="next n"><a href="#"> Next </a></div>#}
+{# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!#}
+
+{#    </div>#}
      <div class="section-section2 phones-container">
         <div class="container">
             <div class="row">
