--- a/templates/first/product_item.html
+++ b/templates/first/product_item.html
@@ -1,7 +1,7 @@
 <div class="col-lg-3">
     <div class="product-item">
         <div>
-            <a href="{% url 'product' products_image.product.id %}">
+            <a href="{% url 'product'  products_image.product.id %}">
                 <img src="{{ products_image.image.url }}" class="img-responsive">
             </a>
         </div>
@@ -21,9 +21,9 @@
             {{products_image.product.price}} RUB
         </div>
         <div class="add-to-card-btn">
-            <button class="btn btn-success">
-                    Добавить в корзину
-            </button>
+{#            <button class="btn btn-success">#}
+{#                    Добавить в корзину#}
+{#            </button>#}
         </div>
     </div>
 </div>
