--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="\first\home">Домой <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="\">Домой <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
@@ -26,6 +26,12 @@
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+      <li class="nav-item">
+            <a href="/checkout">
+                <i class="fas fa-cart-arrow-down fa-2x"></i>
+            </a>
+          {#        <a class="nav-link" href="checkout">Basket</a>#}
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
