--- a/static/style.css
+++ b/static/style.css
@@ -120,49 +120,49 @@ margin: 20px;
 
 /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
 
-/*.slider{*/
-/*    width: 500px;*/
-/*    height: 300px;*/
-/*    margin: 100px;*/
-/*    position: relative;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*}*/
-/*.img{*/
-/*    text-align: center;*/
-/*    line-height: 300px;*/
-/*    position: absolute;*/
-/*    font-size: 50px;*/
-/*    color: #fff;*/
-/*    display: none;*/
-/*}*/
-/*.img.curry{*/
-/*    display: block;*/
-/*}*/
-/*.img:first-child{*/
-/*    width: 500px;*/
-/*    background: red;*/
-/*}*/
-/*.img:nth-child(2){*/
-/*    width: 500px;*/
-/*    background: green;*/
-/*}*/
-/*.img:nth-child(3){*/
-/*    width: 500px;*/
-/*    background: blue;*/
-/*}*/
-/*.img:nth-child(4){*/
-/*    width: 500px;*/
-/*    background: yellow;*/
-/*}*/
-/*.img:nth-child(5){*/
-/*    width: 500px;*/
-/*    background: gold;*/
-/*}*/
-/*.n{*/
-/*    color:#575757;*/
-/*}*/
+.slider{
+    width: 500px;
+    height: 300px;
+    margin: 100px;
+    position: relative;
+    top: 0;
+    left: 250px;
+    right: 0;
+}
+.img{
+    text-align: center;
+    line-height: 300px;
+    position: absolute;
+    font-size: 50px;
+    color: #fff;
+    display: none;
+}
+.img.curry{
+    display: block;
+}
+.img:first-child{
+    width: 500px;
+    /*background: red;*/
+}
+.img:nth-child(2){
+    width: 500px;
+    /*background: green;*/
+}
+.img:nth-child(3){
+    width: 500px;
+    /*background: blue;*/
+}
+.img:nth-child(4){
+    width: 500px;
+    /*background: yellow;*/
+}
+.img:nth-child(5){
+    width: 500px;
+    /*background: gold;*/
+}
+.n{
+    color:#575757;
+}
 /*a{*/
 /*    text-decoration: none;*/
 /*    color: #FD7EAD;*/
@@ -171,13 +171,19 @@ margin: 20px;
 /*a:hover{*/
 /*    color: #0AB6DD;*/
 /*}*/
-/*.prev{*/
-/*    position: relative;*/
-/*    top: 240px;*/
-/*    left: 400px;*/
-/*}*/
-/*.next{*/
-/*    position: relative;*/
-/*    top: 240px;*/
-/*    left: 400px;*/
-/*}*/
+.prev{
+    position: relative;
+    top: 240px;
+    left: 336px;
+}
+.next{
+    position: relative;
+    top: 240px;
+    left: 164px;
+}
+.ots_slider{
+    margin:0 0 0 0;
+    /*height: 400px;*/
+    /*!*position: absolute;*!*/
+    display: flex;
+}
