--- a/templates/first/home.html
+++ b/templates/first/home.html
@@ -21,15 +21,17 @@
     </div>
 {#    <div class="section section-delivery">#}
 {# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!#}
-{#        <div class="prev n"><a href="#"> Pref </a></div>>#}
-{#            <div class="slider">#}
-{#                <div class="img curry">1</div>#}
-{#                <div class="img">2</div>#}
-{#                <div class="img">3</div>#}
-{#                <div class="img">4</div>#}
-{#                <div class="img">5</div>#}
-{#            </div>#}
-{#        <div class="next n"><a href="#"> Next </a></div>#}
+        <div class="ots_slider">
+            <div class="prev n"><button type="button"><i class="fa fa-chevron-left"></i></button></div>
+                <div class="slider">
+                    <div class="img curry"><img src="media/products_images/iphone_11.jpg"></div>
+                    <div class="img"><img src="media/products_images/iphone_11-gold.jpg"></div>
+                    <div class="img"><img src="media/products_images/noutbook1.jpg"></div>
+                    <div class="img"><img src="media/products_images/Samsung_Flip.jpg"></div>
+                    <div class="img"><img src="media/products_images/iphone_11_pro_max.jpg"></div>
+                </div>
+            <div class="next n"><button type="button"><i class="fa fa-chevron-right"></i></button></div>
+        </div>
 {# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!#}
 
 {#    </div>#}
